<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_grey_50_24dp"
        android:orderInCategory="10"
        android:title="@string/action_copy"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_grey_50_24dp"
        android:orderInCategory="20"
        android:title="@string/action_edit"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_grey_50_24dp"
        android:orderInCategory="30"
        android:title="@string/action_share"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_add_addoncard"
        android:orderInCategory="40"
        android:title="@string/action_add_addoncard"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_grey_50_24dp"
        android:orderInCategory="50"
        android:title="@string/action_delete"
        app:showAsAction="never"/>
</menu>