<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_copy"
        android:icon="@drawable/ic_content_copy_grey_50_24dp"
        android:title="@string/action_copy"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_mode_edit_grey_50_24dp"
        android:title="@string/action_edit"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share_grey_50_24dp"
        android:title="@string/action_share"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete_grey_50_24dp"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom"/>
</menu>