<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/medium"
        android:layout_marginTop="@dimen/large"
        android:orientation="vertical">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.4" />

        <TextView
            android:id="@+id/card_info"
            style="@style/AppTheme.Text.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:text="@string/card_information"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cards" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:listitem="@layout/listitem_ccard" />

       <TextView
            android:id="@+id/card_type"
            style="@style/AppTheme.Text.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/card_info"
            tools:text="Primary" />

        <TextView
            android:id="@+id/phone_number"
            style="@style/AppTheme.Text.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/card_type"
            tools:text="8932061116" />

        <TextView
            android:id="@+id/bill_date"
            style="@style/AppTheme.Text.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:textIsSelectable="true"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            tools:text="23 July" />

        <TextView
            android:id="@+id/userid"
            style="@style/AppTheme.Text.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:textIsSelectable="true"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/bill_date"
            tools:text="zkhan1993" />

        <TextView
            android:id="@+id/password"
            style="@style/AppTheme.Text.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/userid"
            tools:text="P@ssw0rd!" />

        <TextView
            android:id="@+id/card_limit"
            style="@style/AppTheme.Text.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/guideline"
            app:layout_constraintTop_toBottomOf="@id/password"
            tools:text="2,25,000 INR" />

        <TextView
            android:id="@+id/tv_card_type"
            style="@style/AppTheme.Text.Muted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:text="@string/card_type"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_type" />

        <TextView
            android:id="@+id/tv_phone_number"
            style="@style/AppTheme.Text.Muted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:text="@string/phone_number"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/phone_number" />

        <TextView
            android:id="@+id/tv_bill_date"
            style="@style/AppTheme.Text.Muted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:text="@string/billing_date"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/bill_date" />

        <TextView
            android:id="@+id/tv_user_id"
            style="@style/AppTheme.Text.Muted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:text="@string/userid"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/userid" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/AppTheme.Text.Muted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:text="@string/password"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/password" />

        <TextView
            android:id="@+id/tv_card_limit"
            style="@style/AppTheme.Text.Muted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/medium"
            android:text="@string/card_limit"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/card_limit" />
        <TextView
            android:id="@+id/title_card_activity"
            style="@style/AppTheme.Text.Dark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large"
            android:text="@string/recent_activities"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_limit" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="@dimen/medium"
            app:layout_constraintTop_toBottomOf="@id/title_card_activity"
            android:layout_width="match_parent"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/listitem_card_activity"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>